unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/Integracion_EBS_Aplicaciones__c.object-meta.xml
<CustomObject>
    <label>Integración EBS Aplicaciones</label>
    <nameField>
        <displayFormat>IEBSA-{00000}</displayFormat>
        <label>Folio Integración Aplicación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones EBS Aplicaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>