unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/Aplicacion_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Aplicacion_de_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aplicación de pago</label>
    <referenceTo>Aplicacion_Pago__c</referenceTo>
    <relationshipLabel>Integraciones EBS Aplicaciones</relationshipLabel>
    <relationshipName>Integraciones_EBS_Aplicaciones</relationshipName>
    <type>Lookup</type>
</CustomField>