unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/FechaAplicacion__c.field-meta.xml
<CustomField>
    <fullName>FechaAplicacion__c</fullName>
    <label>FechaAplicacion</label>
    <type>Date</type>
</CustomField>