unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/FechaContable__c.field-meta.xml
<CustomField>
    <fullName>FechaContable__c</fullName>
    <label>FechaContable</label>
    <type>Date</type>
</CustomField>