unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/IdAplicacionAr__c.field-meta.xml
<CustomField>
    <fullName>IdAplicacionAr__c</fullName>
    <externalId>true</externalId>
    <label>IdAplicacionAr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>