unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/IdClienteAr__c.field-meta.xml
<CustomField>
    <fullName>IdClienteAr__c</fullName>
    <label>IdClienteAr</label>
    <length>22</length>
    <type>Text</type>
</CustomField>