unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/IdFacturaAr__c.field-meta.xml
<CustomField>
    <fullName>IdFacturaAr__c</fullName>
    <label>IdFacturaAr</label>
    <length>22</length>
    <type>Text</type>
</CustomField>