unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/IdInterface__c.field-meta.xml
<CustomField>
    <fullName>IdInterface__c</fullName>
    <label>IdInterface</label>
    <length>22</length>
    <type>Text</type>
</CustomField>