unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/IdNotaCredAr__c.field-meta.xml
<CustomField>
    <fullName>IdNotaCredAr__c</fullName>
    <label>IdNotaCredAr</label>
    <length>22</length>
    <type>Text</type>
</CustomField>