unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/IdReciboAr__c.field-meta.xml
<CustomField>
    <fullName>IdReciboAr__c</fullName>
    <label>IdReciboAr</label>
    <length>22</length>
    <type>Text</type>
</CustomField>