unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteACuenta__c.field-meta.xml
<CustomField>
    <fullName>ImporteACuenta__c</fullName>
    <label>ImporteACuenta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>