unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteAnticipo__c.field-meta.xml
<CustomField>
    <fullName>ImporteAnticipo__c</fullName>
    <label>ImporteAnticipo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>