unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteAplicado__c.field-meta.xml
<CustomField>
    <fullName>ImporteAplicado__c</fullName>
    <label>ImporteAplicado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>