unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteFuncional__c.field-meta.xml
<CustomField>
    <fullName>ImporteFuncional__c</fullName>
    <label>ImporteFuncional</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>