unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteNoAplicado__c.field-meta.xml
<CustomField>
    <fullName>ImporteNoAplicado__c</fullName>
    <label>ImporteNoAplicado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>