unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteNoIdentificado__c.field-meta.xml
<CustomField>
    <fullName>ImporteNoIdentificado__c</fullName>
    <label>ImporteNoIdentificado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>