unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteOriginal__c.field-meta.xml
<CustomField>
    <fullName>ImporteOriginal__c</fullName>
    <label>ImporteOriginal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>