unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteReclamo__c.field-meta.xml
<CustomField>
    <fullName>ImporteReclamo__c</fullName>
    <label>ImporteReclamo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>