unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ImporteResto__c.field-meta.xml
<CustomField>
    <fullName>ImporteResto__c</fullName>
    <label>ImporteResto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>