unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/Mensaje_API__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_API__c</fullName>
    <label>Mensaje API</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>