unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/Mensaje_Error__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_Error__c</fullName>
    <label>Mensaje Error</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>