unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/ModificationNum__c.field-meta.xml
<CustomField>
    <fullName>ModificationNum__c</fullName>
    <label>ModificationNum</label>
    <length>22</length>
    <type>Text</type>
</CustomField>