unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/NumProceso__c.field-meta.xml
<CustomField>
    <fullName>NumProceso__c</fullName>
    <label>NumProceso</label>
    <length>30</length>
    <type>Text</type>
</CustomField>