unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/Request_EBS_hacia_CRM__c.field-meta.xml
<CustomField>
    <fullName>Request_EBS_hacia_CRM__c</fullName>
    <label>Request EBS hacia CRM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>