unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/Respuesta_API__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_API__c</fullName>
    <label>Respuesta API</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>