unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/RowId__c.field-meta.xml
<CustomField>
    <fullName>RowId__c</fullName>
    <label>RowId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>