unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/fields/TipoAplication__c.field-meta.xml
<CustomField>
    <fullName>TipoAplication__c</fullName>
    <label>TipoAplication</label>
    <length>10</length>
    <type>Text</type>
</CustomField>