unpackaged/main/default/objects/Integracion_EBS_Aplicaciones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IdAplicacionAr__c</columns>
    <columns>IdInterfaceCrm__c</columns>
    <columns>Estatus_Integracion__c</columns>
    <columns>IdReciboAr__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Mensaje_API__c</columns>
    <columns>Mensaje_Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>